refactor: cleancode